# ECCC-Programs

./: README.md
Other files/: test_resnet18.py
Other files/AutoDOX files/AutoDOXY v1.0/: AutoDOX_README.txt  cmnt_to_html.py  del_cmnt.py
Other files/AutoDOX files/AutoDox?/: cmnt_to_doxy.py  edit_doxygen.py
Other files/Fortran to C communication/: call_c_function.f90  func_test.c
Other files/Python_Test/: cppCallPython.cpp  pythonCallee.py  testFile.py
Other files/Temp files/: callPython  callPython.cpp  testRemotePython.py
Pytorch_Libtorch_Programs/: 2022-03-model-sharing-to-eccc-netcdf4-data.ipynb
Pytorch_Libtorch_Programs/Fortran-Resnet/: CMakeLists.txt  call_c_function.f90  func_test.cpp  resnet_model_reader.cpp
Pytorch_Libtorch_Programs/Fortran-to-C-communication/: a.out  call_c_function.f90  func_test.cpp  pt_file_creator.py
Pytorch_Libtorch_Programs/PytorchConnect/: CMakeLists.txt  cpp_connect  cpp_connect.f90  libtorch_connect.cpp  pt_file_creator.py
Pytorch_Libtorch_Programs/pytorch-app/: CMakeLists.txt  libtorch_example.cpp
netCDF_interaction/Boundary_conditions/: boundary_calc.py
netCDF_interaction/Cloud_Feedback_Formula/: cloudFeedback_calc_formula.py  cloud_feedback_v1_results.nc  cloud_feedback_v2_results.nc  cloud_feedback_v3_results.nc  netCDF_editor_v1.py  netCDF_editor_v2.py  read_write_netCDF_example.ipynb  result_CONDITIONS_v1.nc  result_CONDITIONS_v2.nc
netCDF_interaction/OZ_calc/: avgOzone_time.py  avgOzone_time_NO_WEIGHT.py  avgOzone_time_weighted.py  netCDF_editor.py
